tests/ui/scalable-vectors/invalid.stderr
error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/invalid.rs:109:11
   |
LL | fn barqux(#[rustc_scalable_vector(4)] _x: u32) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[rustc_scalable_vector]` attribute cannot be used on extern crates
  --> $DIR/invalid.rs:9:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on use statements
  --> $DIR/invalid.rs:13:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on statics
  --> $DIR/invalid.rs:17:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on constants
  --> $DIR/invalid.rs:21:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on modules
  --> $DIR/invalid.rs:25:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign modules
  --> $DIR/invalid.rs:30:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign statics
  --> $DIR/invalid.rs:33:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign types
  --> $DIR/invalid.rs:36:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign functions
  --> $DIR/invalid.rs:39:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on type aliases
  --> $DIR/invalid.rs:44:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on enums
  --> $DIR/invalid.rs:48:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on type parameters
  --> $DIR/invalid.rs:50:10
   |
LL | enum Bar<#[rustc_scalable_vector(4)] T> {
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on enum variants
  --> $DIR/invalid.rs:52:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on struct fields
  --> $DIR/invalid.rs:58:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on unions
  --> $DIR/invalid.rs:63:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on traits
  --> $DIR/invalid.rs:70:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on associated types
  --> $DIR/invalid.rs:73:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on associated consts
  --> $DIR/invalid.rs:76:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on provided trait methods
  --> $DIR/invalid.rs:79:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on trait aliases
  --> $DIR/invalid.rs:84:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on inherent impl blocks
  --> $DIR/invalid.rs:88:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on inherent methods
  --> $DIR/invalid.rs:91:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on trait impl blocks
  --> $DIR/invalid.rs:96:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on macro defs
  --> $DIR/invalid.rs:103:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:107:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on function params
  --> $DIR/invalid.rs:109:11
   |
LL | fn barqux(#[rustc_scalable_vector(4)] _x: u32) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:113:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:117:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:121:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on closures
  --> $DIR/invalid.rs:126:14
   |
LL |     let _x = #[rustc_scalable_vector(4)] || { };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on expressions
  --> $DIR/invalid.rs:128:14
   |
LL |     let _y = #[rustc_scalable_vector(4)] 3 + 4;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on statements
  --> $DIR/invalid.rs:130:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on match arms
  --> $DIR/invalid.rs:135:9
   |
LL |         #[rustc_scalable_vector(4)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error[E0539]: malformed `rustc_scalable_vector` attribute input
  --> $DIR/invalid.rs:142:1
   |
LL | #[rustc_scalable_vector("4")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^---^^
   |                         |
   |                         expected an integer literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_scalable_vector("4")]
LL + #[rustc_scalable_vector(count)]
   |
LL - #[rustc_scalable_vector("4")]
LL + #[rustc_scalable_vector]
   |

error[E0805]: malformed `rustc_scalable_vector` attribute input
  --> $DIR/invalid.rs:146:1
   |
LL | #[rustc_scalable_vector(4, 2)]
   | ^^^^^^^^^^^^^^^^^^^^^^^------^
   |                        |
   |                        expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_scalable_vector(4, 2)]
LL + #[rustc_scalable_vector(count)]
   |
LL - #[rustc_scalable_vector(4, 2)]
LL + #[rustc_scalable_vector]
   |

error[E0539]: malformed `rustc_scalable_vector` attribute input
  --> $DIR/invalid.rs:150:1
   |
LL | #[rustc_scalable_vector(count = "4")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^-----------^^
   |                         |
   |                         expected an integer literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_scalable_vector(count = "4")]
LL + #[rustc_scalable_vector(count)]
   |
LL - #[rustc_scalable_vector(count = "4")]
LL + #[rustc_scalable_vector]
   |

error: element count in `rustc_scalable_vector` is too large: `65536`
  --> $DIR/invalid.rs:154:1
   |
LL | #[rustc_scalable_vector(65536)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the value may not exceed `u16::MAX`

error: scalable vector structs can only have scalable vector fields
  --> $DIR/invalid.rs:162:18
   |
LL | struct OkayNoArg(f32);
   |                  ^^^

error: aborting due to 39 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
